--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,3 +1,10 @@
 // you can change config here
-$colors: #c0392b, #d35400, #f39c12, #27ae60, #16a085, #e9e9e9, #8e44ad, #2c3e50,
-  #e9e9e9 !default;
+$colors: #c0392b, 
+         #d35400, 
+         #f39c12, 
+         #27ae60, 
+         #16a085, 
+         #e9e9e9, 
+         #8e44ad, 
+         #2c3e50,
+         #e9e9e9 !default;
